tests/errors/typecheck/test_tc_06_if_cond_type.pc
#import std.io;
int main() {
    int x = 5;
    if x {
        io.println("hello");
    }
    return 0;
}
